Revert to java16